# AstroEyesServer

./: .gitignore  LICENSE  README.md  alembic.ini  app.py  changelogs.md  example.env  init_db.py  launch.py  pyproject.toml
alembic/: env.py
dev/: docker-compose.yml
models/: auth.py  token.py  user.py
routers/: auth.py  token.py  user.py  utils.py
utils/: config.py  jwt.py  log.py  validator.py
utils/db/: __init__.py  schemas.py
utils/redis/: __init__.py
