[project]
name = "astroeyes-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "geoalchemy2>=0.17.1",
    "pyjwt>=2.10.1",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.41",
    "sqlalchemy-utils>=0.41.2",
    "uvicorn[standard]>=0.35.0",
    "asyncpg>=0.30.0",
    "passlib>=1.7.4",
    "alembic>=1.16.4",
    "psycopg2-binary>=2.9.10",
]
